fix: update scrollbar and how-it-work part style

--- a/src/reset.css
+++ b/src/reset.css
@@ -6,6 +6,15 @@ body {
   background: black;
 }
 
+.scrollbar::-webkit-scrollbar {
+  height: 10px;
+}
+
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
+
 @layer base {
   h1 {
     @apply md:text-7xl text-[56px] md:leading-[1.2em] leading-[1.2em] font-semibold;
